--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,18 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  line-height: 18px;
+  color: #555;
+  background-color: white;
+}
+
+.legend i {
+  width: 15px;
+  height: 15px;
+  float: left;
+  margin-left: 8px;
+  margin-right: 8px;
+  opacity: 0.7;
+}
